// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListStyleFacet Renderers should include renderFacetItem 1`] = `
<React.Fragment>
  <TagsIcon
    className="little-spacer-right"
    fill="#888"
  />
  tag
</React.Fragment>
`;

exports[`ListStyleFacet Renderers should include renderSearchResult 1`] = `
<React.Fragment>
  <TagsIcon
    className="little-spacer-right"
    fill="#888"
  />
  <React.Fragment>
    my-
    <mark>
      tag
    </mark>
  </React.Fragment>
</React.Fragment>
`;

exports[`should render correctly 1`] = `
<ListStyleFacet
  facetHeader="coding_rules.facet.tags"
  fetching={false}
  getFacetItemText={[Function]}
  getSearchResultKey={[Function]}
  getSearchResultText={[Function]}
  maxInitialItems={15}
  maxItems={100}
  minSearchLength={2}
  onChange={[MockFunction]}
  onSearch={[Function]}
  onToggle={[MockFunction]}
  open={false}
  property="tags"
  renderFacetItem={[Function]}
  renderSearchResult={[Function]}
  searchPlaceholder="search.search_for_tags"
  stats={{}}
  values={[]}
/>
`;
